--- a/project.ipynb
+++ b/project.ipynb
@@ -143,21 +143,21 @@
    ],
    "source": [
     "plot1 = {'currencies' : df_18_19['code'].loc[(df_18_19['dev_countries'] == 1)],\n",
-    "          'przed_pandemia' : df_18_19['diff'].loc[(df_18_19['dev_countries'] == 1)],\n",
-    "          'podczas_pandemi' : df_19_20['diff'].loc[(df_18_19['dev_countries'] == 1)]}\n",
+    "          'before_pandemic' : df_18_19['diff'].loc[(df_18_19['dev_countries'] == 1)],\n",
+    "          'during_pandemic' : df_19_20['diff'].loc[(df_18_19['dev_countries'] == 1)]}\n",
     "\n",
     "\n",
     "df = pd.DataFrame(plot1)\n",
-    "df.plot('currencies',y=['przed_pandemia','podczas_pandemi'], kind='bar')\n",
+    "df.plot('currencies',y=['before_pandemic','during_pandemic'], kind='bar')\n",
     "plt.show()\n",
     "\n",
     "plot2 = {'currencies' : df_18_19['code'].loc[(df_18_19['dev_countries'] == 0)],\n",
-    "          'przed_pandemia' : df_18_19['diff'].loc[(df_18_19['dev_countries'] == 0)],\n",
-    "          'podczas_pandemi' : df_19_20['diff'].loc[(df_18_19['dev_countries'] == 0)]}\n",
+    "          'before_pandemic' : df_18_19['diff'].loc[(df_18_19['dev_countries'] == 0)],\n",
+    "          'during_pandemic' : df_19_20['diff'].loc[(df_18_19['dev_countries'] == 0)]}\n",
     "\n",
     "\n",
     "df = pd.DataFrame(plot2)\n",
-    "df.plot('currencies',y=['przed_pandemia','podczas_pandemi'], kind='bar')\n",
+    "df.plot('currencies',y=['before_pandemic','during_pandemic'], kind='bar')\n",
     "plt.show()\n",
     "\n",
     "\n"
